--- a/q11.html
+++ b/q11.html
@@ -54,7 +54,7 @@
             <div class="row clearfix" style="margin-top: 5%">
                 <div class="col-md-12 column form-group">
                     <h3><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span>Which goals are the most important to you in the next 12 months?</h3>
-                    <textarea class="form-control" placeholder="[Example: I’ve got high blood pressure and diabetes]" style="height: 300px"></textarea>
+                    <textarea id="q11_info" class="form-control" placeholder="[Example: I’ve got high blood pressure and diabetes]" style="height: 300px"></textarea>
                 </div>
             </div>
         </div>
