--- a/q13.html
+++ b/q13.html
@@ -51,7 +51,7 @@
             <div class="row clearfix" style="margin-top: 5%">
                 <div class="col-md-12 column form-group">
                     <h3><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span>If you had one ultimate wish, what would it be?</h3>
-                    <textarea class="form-control" placeholder="Example: An overseas trip? To participate in a marathon? Go on a hot air balloon? To get married?" style="height: 300px"></textarea>
+                    <textarea id="q13_info" class="form-control" placeholder="Example: An overseas trip? To participate in a marathon? Go on a hot air balloon? To get married?" style="height: 300px"></textarea>
                 </div>
             </div>
         </div>
