--- a/q4.html
+++ b/q4.html
@@ -50,28 +50,28 @@
         <div class="col-xs-6 col-md-10 column">
             <h1>My Home</h1>
             <div class="row clearfix" style="margin-top: 5%">
-                <div class="col-md-6 column form-group">
+                <div  id="q4_info1" class="col-md-6 column form-group">
                     <h3><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span>What type of home I live in?</h3>
                     <textarea class="form-control" ></textarea>
                 </div>
 
                 <div class="col-md-6 column form-group">
                     <h3><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span>The people I usually live with:</h3>
-                    <textarea class="form-control" placeholder=""></textarea>
+                    <textarea id="q4_info2" class="form-control" placeholder=""></textarea>
                 </div>
             </div>
             <div class="row clearfix">
                 <div class="col-md-4 column form-group p4-label">
                     <h3><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span>Who helps me at home</h3>
-                    <textarea class="form-control" placeholder=""></textarea>
+                    <textarea id="q4_info3" class="form-control" placeholder=""></textarea>
                 </div>
                 <div class="col-md-4 column form-group p4-label">
                     <h3><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span>What do they help me with?</h3>
-                    <textarea class="form-control" placeholder=""></textarea>
+                    <textarea id="q4_info4" class="form-control" placeholder=""></textarea>
                 </div>
                 <div class="col-md-4 column form-group">
                     <h3><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span>Do I use any equipment or other things to help me at home?</h3>
-                    <textarea class="form-control" placeholder=""></textarea>
+                    <textarea id="q4_info5" class="form-control" placeholder=""></textarea>
                 </div>
             </div>
         </div>
