--- a/q6.html
+++ b/q6.html
@@ -53,51 +53,51 @@
                 and informal supports.</em></small></h1>
             <div id="tabs">
                 <ul>
-                    <li><a href="#tabs-1">Daily Living</a></li>
-                    <li><a href="#tabs-2">Work</a></li>
-                    <li><a href="#tabs-3">Learning</a></li>
-                    <li><a href="#tabs-4">Social & Community Participation</a></li>
-                    <li><a href="#tabs-5">Home</a></li>
-                    <li><a href="#tabs-6">Health & Wellbeing</a></li>
-                    <li><a href="#tabs-7">Transport</a></li>
-                    <li><a href="#tabs-8">Behaviour support</a></li>
-                    <li><a href="#tabs-9">Respite</a></li>
+                    <li><a id="q6_info11" href="#tabs-1">Daily Living</a></li>
+                    <li><a id="q6_info21" href="#tabs-2">Work</a></li>
+                    <li><a id="q6_info31" href="#tabs-3">Learning</a></li>
+                    <li><a id="q6_info41" href="#tabs-4">Social & Community Participation</a></li>
+                    <li><a id="q6_info51" href="#tabs-5">Home</a></li>
+                    <li><a id="q6_info61" href="#tabs-6">Health & Wellbeing</a></li>
+                    <li><a id="q6_info71" href="#tabs-7">Transport</a></li>
+                    <li><a id="q6_info81" href="#tabs-8">Behaviour support</a></li>
+                    <li><a id="q6_info91" href="#tabs-9">Respite</a></li>
                 </ul>
                 <div id="tabs-1">
                     <h3>Who supports me to do this</h3>
-                    <textarea class="form-control" placeholder=""></textarea>
+                    <textarea id="q6_info12" class="form-control" placeholder=""></textarea>
                 </div>
                 <div id="tabs-2">
                     <h3>Who supports me to do this</h3>
-                    <textarea class="form-control" placeholder=""></textarea>
+                    <textarea id="q6_info22" class="form-control" placeholder=""></textarea>
                 </div>
                 <div id="tabs-3">
                     <h3>Who supports me to do this</h3>
-                    <textarea class="form-control" placeholder=""></textarea>
+                    <textarea id="q6_info32" class="form-control" placeholder=""></textarea>
                 </div>
                 <div id="tabs-4">
                     <h3>Who supports me to do this</h3>
-                    <textarea class="form-control" placeholder=""></textarea>
+                    <textarea id="q6_info42" class="form-control" placeholder=""></textarea>
                 </div>
                 <div id="tabs-5">
                     <h3>Who supports me to do this</h3>
-                    <textarea class="form-control" placeholder=""></textarea>
+                    <textarea id="q6_info52" class="form-control" placeholder=""></textarea>
                 </div>
                 <div id="tabs-6">
                     <h3>Who supports me to do this</h3>
-                    <textarea class="form-control" placeholder=""></textarea>
+                    <textarea id="q6_info62" class="form-control" placeholder=""></textarea>
                 </div>
                 <div id="tabs-7">
                     <h3>Who supports me to do this</h3>
-                    <textarea class="form-control" placeholder=""></textarea>
+                    <textarea id="q6_info72" class="form-control" placeholder=""></textarea>
                 </div>
                 <div id="tabs-8">
                     <h3>Who supports me to do this</h3>
-                    <textarea class="form-control" placeholder=""></textarea>
+                    <textarea id="q6_info82" class="form-control" placeholder=""></textarea>
                 </div>
                 <div id="tabs-9">
                     <h3>Who supports me to do this</h3>
-                    <textarea class="form-control" placeholder=""></textarea>
+                    <textarea id="q6_info92" class="form-control" placeholder=""></textarea>
                 </div>
             </div>
 
@@ -113,11 +113,11 @@
                         <div class="modal-header">
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                             <h4 class="modal-title" id="myModalLabel">
-                                <input type="text" class="form-control" placeholder="Add a title to your activity">
+                                <input id="q6_info101" type="text" class="form-control" placeholder="Add a title to your activity">
                             </h4>
                         </div>
                         <div class="modal-body">
-                            <textarea class="form-control" placeholder=""></textarea>
+                            <textarea id="q6_info102" class="form-control" placeholder=""></textarea>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
