--- a/q8.html
+++ b/q8.html
@@ -67,22 +67,22 @@
                         </thead>
                         <tbody>
                         <tr>
-                            <td><textarea class="form-control" placeholder="[Example: Speech therapy]"></textarea></td>
-                            <td><textarea class="form-control" placeholder="[Example: My speech therapist,Melissa]"></textarea></td>
-                            <td><textarea class="form-control" placeholder="[Example: To help me communicate better]"></textarea></td>
-                            <td><textarea class="form-control" placeholder="[Example: Once a week]"></textarea></td>
+                            <td><textarea id="q8_info11" class="form-control" placeholder="[Example: Speech therapy]"></textarea></td>
+                            <td><textarea id="q8_info12"  class="form-control" placeholder="[Example: My speech therapist,Melissa]"></textarea></td>
+                            <td><textarea id="q8_info13"  class="form-control" placeholder="[Example: To help me communicate better]"></textarea></td>
+                            <td><textarea id="q8_info14"  class="form-control" placeholder="[Example: Once a week]"></textarea></td>
                         </tr>
                         <tr>
-                            <td><textarea class="form-control" placeholder="[Example: Social group]"></textarea></td>
-                            <td><textarea class="form-control" placeholder="[Example: Community group]"></textarea></td>
-                            <td><textarea class="form-control" placeholder="[Example: Friendships]"></textarea></td>
-                            <td><textarea class="form-control" placeholder="[Example: Every second week]"></textarea></td>
+                            <td><textarea id="q8_info21" class="form-control" placeholder="[Example: Social group]"></textarea></td>
+                            <td><textarea id="q8_info22"  class="form-control" placeholder="[Example: Community group]"></textarea></td>
+                            <td><textarea id="q8_info23"  class="form-control" placeholder="[Example: Friendships]"></textarea></td>
+                            <td><textarea id="q8_info24"  class="form-control" placeholder="[Example: Every second week]"></textarea></td>
                         </tr>
                         <tr>
-                            <td><textarea class="form-control" placeholder=""></textarea></td>
-                            <td><textarea class="form-control" placeholder=""></textarea></td>
-                            <td><textarea class="form-control" placeholder=""></textarea></td>
-                            <td><textarea class="form-control" placeholder=""></textarea></td>
+                            <td><textarea id="q8_info31" class="form-control" placeholder=""></textarea></td>
+                            <td><textarea id="q8_info32" class="form-control" placeholder=""></textarea></td>
+                            <td><textarea id="q8_info33"  class="form-control" placeholder=""></textarea></td>
+                            <td><textarea id="q8_info34"  class="form-control" placeholder=""></textarea></td>
                         </tr>
                         </tbody>
                     </table>
@@ -99,28 +99,28 @@
                         </thead>
                         <tbody>
                         <tr>
-                            <td><textarea class="form-control" placeholder=""></textarea></td>
-                            <td><textarea class="form-control" placeholder=""></textarea></td>
-                            <td><textarea class="form-control" placeholder=""></textarea></td>
-                            <td><textarea class="form-control" placeholder=""></textarea></td>
+                            <td><textarea id="q8_info41" class="form-control" placeholder=""></textarea></td>
+                            <td><textarea id="q8_info42" class="form-control" placeholder=""></textarea></td>
+                            <td><textarea id="q8_info43"  class="form-control" placeholder=""></textarea></td>
+                            <td><textarea id="q8_info44"  class="form-control" placeholder=""></textarea></td>
                         </tr>
                         <tr>
-                            <td><textarea class="form-control" placeholder=""></textarea></td>
-                            <td><textarea class="form-control" placeholder=""></textarea></td>
-                            <td><textarea class="form-control" placeholder=""></textarea></td>
-                            <td><textarea class="form-control" placeholder=""></textarea></td>
+                            <td><textarea id="q8_info51" class="form-control" placeholder=""></textarea></td>
+                            <td><textarea id="q8_info52" class="form-control" placeholder=""></textarea></td>
+                            <td><textarea id="q8_info53"  class="form-control" placeholder=""></textarea></td>
+                            <td><textarea id="q8_info54"  class="form-control" placeholder=""></textarea></td>
                         </tr>
                         <tr>
-                            <td><textarea class="form-control" placeholder=""></textarea></td>
-                            <td><textarea class="form-control" placeholder=""></textarea></td>
-                            <td><textarea class="form-control" placeholder=""></textarea></td>
-                            <td><textarea class="form-control" placeholder=""></textarea></td>
+                            <td><textarea id="q8_info61" class="form-control" placeholder=""></textarea></td>
+                            <td><textarea id="q8_info62" class="form-control" placeholder=""></textarea></td>
+                            <td><textarea id="q8_info63"  class="form-control" placeholder=""></textarea></td>
+                            <td><textarea id="q8_info64"  class="form-control" placeholder=""></textarea></td>
                         </tr>
                         </tbody>
                     </table>
                     <div class="col-md-12 column" style="margin-top: 10px">
                         <h3>Are there any programs and therapy supports you would like but don’t currently have?</h3>
-                        <textarea class="form-control" placeholder=""></textarea>
+                        <textarea id="q8_additional" class="form-control" placeholder=""></textarea>
                     </div>
                 </div>
 
