--- a/q9.html
+++ b/q9.html
@@ -67,22 +67,22 @@
                         </thead>
                         <tbody>
                         <tr>
-                            <td><textarea class="form-control" placeholder="[Example: An iPad]"></textarea></td>
-                            <td><textarea class="form-control" placeholder="[Example: As a speech aid]"></textarea></td>
-                            <td><textarea class="form-control" placeholder="[Example: Whenever I want to communicate]"></textarea></td>
-                            <td><textarea class="form-control" placeholder="[Example: Every day]"></textarea></td>
+                            <td><textarea id="q9_info11" class="form-control" placeholder="[Example: An iPad]"></textarea></td>
+                            <td><textarea id="q9_info12" class="form-control" placeholder="[Example: As a speech aid]"></textarea></td>
+                            <td><textarea id="q9_info13" class="form-control" placeholder="[Example: Whenever I want to communicate]"></textarea></td>
+                            <td><textarea id="q9_info14" class="form-control" placeholder="[Example: Every day]"></textarea></td>
                         </tr>
                         <tr>
-                            <td><textarea class="form-control" placeholder=""></textarea></td>
-                            <td><textarea class="form-control" placeholder=""></textarea></td>
-                            <td><textarea class="form-control" placeholder=""></textarea></td>
-                            <td><textarea class="form-control" placeholder=""></textarea></td>
+                            <td><textarea id="q9_info21" class="form-control" placeholder=""></textarea></td>
+                            <td><textarea id="q9_info22" class="form-control" placeholder=""></textarea></td>
+                            <td><textarea id="q9_info23" class="form-control" placeholder=""></textarea></td>
+                            <td><textarea id="q9_info24" class="form-control" placeholder=""></textarea></td>
                         </tr>
                         <tr>
-                            <td><textarea class="form-control" placeholder=""></textarea></td>
-                            <td><textarea class="form-control" placeholder=""></textarea></td>
-                            <td><textarea class="form-control" placeholder=""></textarea></td>
-                            <td><textarea class="form-control" placeholder=""></textarea></td>
+                            <td><textarea id="q9_info31" class="form-control" placeholder=""></textarea></td>
+                            <td><textarea id="q9_info32" class="form-control" placeholder=""></textarea></td>
+                            <td><textarea id="q9_info33" class="form-control" placeholder=""></textarea></td>
+                            <td><textarea id="q9_info34" class="form-control" placeholder=""></textarea></td>
                         </tr>
                         </tbody>
                     </table>
@@ -99,28 +99,28 @@
                         </thead>
                         <tbody>
                         <tr>
-                            <td><textarea class="form-control" placeholder=""></textarea></td>
-                            <td><textarea class="form-control" placeholder=""></textarea></td>
-                            <td><textarea class="form-control" placeholder=""></textarea></td>
-                            <td><textarea class="form-control" placeholder=""></textarea></td>
+                            <td><textarea id="q9_info41" class="form-control" placeholder=""></textarea></td>
+                            <td><textarea id="q9_info42" class="form-control" placeholder=""></textarea></td>
+                            <td><textarea id="q9_info43" class="form-control" placeholder=""></textarea></td>
+                            <td><textarea id="q9_info44" class="form-control" placeholder=""></textarea></td>
                         </tr>
                         <tr>
-                            <td><textarea class="form-control" placeholder=""></textarea></td>
-                            <td><textarea class="form-control" placeholder=""></textarea></td>
-                            <td><textarea class="form-control" placeholder=""></textarea></td>
-                            <td><textarea class="form-control" placeholder=""></textarea></td>
+                            <td><textarea id="q9_info51" class="form-control" placeholder=""></textarea></td>
+                            <td><textarea id="q9_info52" class="form-control" placeholder=""></textarea></td>
+                            <td><textarea id="q9_info53" class="form-control" placeholder=""></textarea></td>
+                            <td><textarea id="q9_info54" class="form-control" placeholder=""></textarea></td>
                         </tr>
                         <tr>
-                            <td><textarea class="form-control" placeholder=""></textarea></td>
-                            <td><textarea class="form-control" placeholder=""></textarea></td>
-                            <td><textarea class="form-control" placeholder=""></textarea></td>
-                            <td><textarea class="form-control" placeholder=""></textarea></td>
+                            <td><textarea id="q9_info61" class="form-control" placeholder=""></textarea></td>
+                            <td><textarea id="q9_info62" class="form-control" placeholder=""></textarea></td>
+                            <td><textarea id="q9_info63" class="form-control" placeholder=""></textarea></td>
+                            <td><textarea id="q9_info64" class="form-control" placeholder=""></textarea></td>
                         </tr>
                         </tbody>
                     </table>
                     <div class="col-md-12 column" style="margin-top: 10px">
                         <h3>Are there any equipment, aid or modification supports you would like but don’t currently have?</h3>
-                        <textarea class="form-control" placeholder=""></textarea>
+                        <textarea id="q9_additional" class="form-control" placeholder=""></textarea>
                     </div>
                 </div>
 
