--- a/q10.html
+++ b/q10.html
@@ -69,34 +69,34 @@
                     <tbody>
                     <tr>
                         <th scope="row">Morning</th>
-                        <td><textarea class="form-control" placeholder=""></textarea></td>
-                        <td><textarea class="form-control" placeholder=""></textarea></td>
-                        <td><textarea class="form-control" placeholder=""></textarea></td>
-                        <td><textarea class="form-control" placeholder=""></textarea></td>
-                        <td><textarea class="form-control" placeholder=""></textarea></td>
-                        <td><textarea class="form-control" placeholder=""></textarea></td>
-                        <td><textarea class="form-control" placeholder=""></textarea></td>
+                        <td><textarea id="q10_mon1" class="form-control" placeholder=""></textarea></td>
+                        <td><textarea id="q10_tue1" class="form-control" placeholder=""></textarea></td>
+                        <td><textarea id="q10_wed1" class="form-control" placeholder=""></textarea></td>
+                        <td><textarea id="q10_thu1" class="form-control" placeholder=""></textarea></td>
+                        <td><textarea id="q10_fri1" class="form-control" placeholder=""></textarea></td>
+                        <td><textarea id="q10_sat1" class="form-control" placeholder=""></textarea></td>
+                        <td><textarea id="q10_sun1" class="form-control" placeholder=""></textarea></td>
 
                     </tr>
                     <tr>
                         <th scope="row">Afternoon</th>
-                        <td><textarea class="form-control" placeholder=""></textarea></td>
-                        <td><textarea class="form-control" placeholder=""></textarea></td>
-                        <td><textarea class="form-control" placeholder=""></textarea></td>
-                        <td><textarea class="form-control" placeholder=""></textarea></td>
-                        <td><textarea class="form-control" placeholder=""></textarea></td>
-                        <td><textarea class="form-control" placeholder=""></textarea></td>
-                        <td><textarea class="form-control" placeholder=""></textarea></td>
+                        <td><textarea id="q10_mon2" class="form-control" placeholder=""></textarea></td>
+                        <td><textarea id="q10_tue2" class="form-control" placeholder=""></textarea></td>
+                        <td><textarea id="q10_wed2" class="form-control" placeholder=""></textarea></td>
+                        <td><textarea id="q10_thu2" class="form-control" placeholder=""></textarea></td>
+                        <td><textarea id="q10_fri2" class="form-control" placeholder=""></textarea></td>
+                        <td><textarea id="q10_sat2" class="form-control" placeholder=""></textarea></td>
+                        <td><textarea id="q10_sun2" class="form-control" placeholder=""></textarea></td>
                     </tr>
                     <tr>
                         <th scope="row">Evening</th>
-                        <td><textarea class="form-control" placeholder=""></textarea></td>
-                        <td><textarea class="form-control" placeholder=""></textarea></td>
-                        <td><textarea class="form-control" placeholder=""></textarea></td>
-                        <td><textarea class="form-control" placeholder=""></textarea></td>
-                        <td><textarea class="form-control" placeholder=""></textarea></td>
-                        <td><textarea class="form-control" placeholder=""></textarea></td>
-                        <td><textarea class="form-control" placeholder=""></textarea></td>
+                        <td><textarea id="q10_mon3" class="form-control" placeholder=""></textarea></td>
+                        <td><textarea id="q10_tue3" class="form-control" placeholder=""></textarea></td>
+                        <td><textarea id="q10_wed3" class="form-control" placeholder=""></textarea></td>
+                        <td><textarea id="q10_thu3" class="form-control" placeholder=""></textarea></td>
+                        <td><textarea id="q10_fri3" class="form-control" placeholder=""></textarea></td>
+                        <td><textarea id="q10_sat3" class="form-control" placeholder=""></textarea></td>
+                        <td><textarea id="q10_sun3" class="form-control" placeholder=""></textarea></td>
                     </tr>
                     </tbody>
                 </table>
