--- a/q12.html
+++ b/q12.html
@@ -54,7 +54,7 @@
             <div class="row clearfix" style="margin-top: 5%">
                 <div class="col-md-12 column form-group">
                     <h3><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span>What would you like to achieve in the next five years?</h3>
-                    <textarea class="form-control" placeholder="" style="height: 300px"></textarea>
+                    <textarea id="q12_info" class="form-control" placeholder="" style="height: 300px"></textarea>
                 </div>
             </div>
         </div>
